fix: re-align bio and gig-wrapper and change gig-wrapper fontsize in media query Ipad landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1337,6 +1337,8 @@ input[type=reset]{
         float: left;
         margin-left: 20px;
         margin-right: 0;
+
+        margin-top: 70px;
      
     }
      .bio {
@@ -1344,9 +1346,14 @@ input[type=reset]{
         max-width: 40%;
         margin-top: 1px;
         padding-top: 5px;
-        padding-left: 5px;
+        padding-left: 0px;
         margin-left: 5px;
         margin-right: 55px;
+        width: 380px;
+        position: absolute;
+        left: 470px;
+
+        margin-top: 70px;
     }
     .bio h4{
       font-size: 130%;
@@ -1362,7 +1369,8 @@ input[type=reset]{
        margin-top: 50px;
        padding-top:  50px;
        padding-bottom: 40px;
-       padding-left: 510px;
+       padding-left: 440px;
+       font-size: 20px;
    }
 
    .gig-wrapper h3{
